--- a/Phase-4/admin-dash.ejs
+++ b/Phase-4/admin-dash.ejs
@@ -44,7 +44,7 @@
               <a href="/delete/<%=user._id %>" onclick="func()" class="bg-red-400 px-3 rounded ml-4 pt-2 pb-2">Delete</a>
             </td>
           </tr>
-          <%} }) %>
+          <%} }) %>HGVJHGV
 
         </tbody>
       </table>
