--- a/Phase-5/views/add-user.ejs
+++ b/Phase-5/views/add-user.ejs
@@ -10,7 +10,7 @@
 <body class="bg-gray-300">
   <div class="max-w-md mx-auto mt-28 bg-white p-6 rounded shadow-md">
     <h2 class="text-xl font-bold mb-4">Add New User</h2>
-    <form  class="space-y-4" action="/adminAdd" method="post">
+    <form class="space-y-4" action="/adminAdd" method="post">
       <div>
         <label class="block mb-1 font-medium">Username</label>
         <input type="text" id="username" name="name" class="w-full border px-3 py-2 rounded" required>
@@ -26,6 +26,14 @@
       <div>
         <label class="block mb-1 font-medium">phone</label>
         <input type="number" id="phone" name="phone" class="w-full border px-3 py-2 rounded" required>
+      </div>
+      <div>
+       
+        <select name="Status" id="">
+          <option value="active" class="font-bold ">ACTIVE</option>
+          <option value="Inactive" class="font-bold">INACTIVE</option>
+        </select>
+
       </div>
       <div class="flex justify-between mt-4">
         <button type="submit" class="bg-blue-500 text-white px-3 py-3 rounded hover:bg-blue-700">Add User</button>
