--- a/Phase-5/views/edit.ejs
+++ b/Phase-5/views/edit.ejs
@@ -10,7 +10,7 @@
 <body class="bg-gray-300">
   <div class="max-w-md mx-auto mt-28 bg-white p-6 rounded shadow-md">
     <h2 class="text-xl font-bold mb-4">Edit User</h2>
-    <form  class="space-y-4" action="/updateUser/<%=user._id %>" method="post">
+    <form class="space-y-4" action="/updateUser/<%=user._id %>" method="post">
       <div>
         <label class="block mb-1 font-medium">Username</label>
         <input type="text" id="username" name="name" class="w-full border px-3 py-2 rounded" required value="<%=user.name %>">
@@ -22,6 +22,10 @@
       <div>
         <label class="block mb-1 font-medium">Phone no.</label>
         <input type="number" id="phone" name="phone" class="w-full border px-3 py-2 rounded" required value="<%=user.phone %>">
+      </div>
+      <div>
+        <label class="block mb-1 font-medium">Status</label>
+        <input type="text" id="status" name="status" class="w-full border px-3 py-2 rounded" required value="<%=user.status %>">
       </div>
       <div class="flex justify-between mt-4">
         <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Ok</button>
